# projeto_vc_final

./: adaboost.py  dt.py  forest.py  pyproject.toml
src/util/: dataset.py  filter.py  image.py
