[tool.poetry]
name = "projeto-vc-final"
version = "0.1.0"
description = ""
authors = ["yalr098 <yvesromero1998@gmail.com>"]
readme = "README.md"
packages = [{include = "projeto_vc_final"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0.66"
numpy = "^1.23.5"
argparse = "^1.4.0"
matplotlib = "^3.6.2"
keras = "2.8.0rc0"
scikit-learn = "^1.1.3"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
